# bxrabbitmq

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: BxPackageVersions.db  BxRabbitMQConfig.cmake.in  BxRabbitMQConfigVersion.cmake.in  BxVersionManager.cmake
doc/: install_curlpp_ubuntu16.04.rst  install_librabbitmq-c_ubuntu16.04.rst
examples/management/: CMakeLists.txt  README.md  ex1.cxx
examples/management/tools/: build.sh
examples/tutorials/: CMakeLists.txt  README.md  t1_receive.cxx  t1_send.cxx  t2_new_task.cxx  t2_worker.cxx  t3_emit_log.cxx  t3_receive_logs.cxx  t4_emit_log_direct.cxx  t4_receive_logs_direct.cxx  t5_emit_log_topic.cxx  t5_receive_logs_topic.cxx  t6_rpc_client.cxx  t6_rpc_server.cxx
examples/tutorials/tools/: build.sh
src/rabbitmq/: basic_properties.cc  basic_properties.h  channel.cc  channel.h  config.h.in  connection.cc  connection.h  core.cc  core.h  exception.cc  exception.h  management.cc  management.h  parameters.cc  parameters.h  rabbit_mgr.cc  rabbit_mgr.h  version.h.in
src/rabbitmq/testing/: test.cc  test.h  test_mgr.cc  test_mgr.h  test_rabbitmq_0.cxx  test_rabbitmq_mgr_0.cxx
src/utilities/: bxrabbitmq-query.in
tools/: README.rst  build.sh  clean.sh
